Solved bug in fillTopRow and tested behaviour.